OpenJMLTest/test/gitbug458b/expected
test/gitbug458b/Allocator.jml:9: error: Parameter names in a specification file must match those in the Java source: sizeXYZ vs. sizeABC
	public static byte[] alloc(int sizeXYZ);
	                               ^
Operation not performed because of parse or type errors
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
